add de outras classes